src/objects/Apttus_Config2__RollupData__c.object
<CustomObject>
    <description>Represents the rollup data for use in criteria</description>
    <fields>
        <fullName>Apttus_Config2__GroupByValues__c</fullName>
        <description>The group by field values</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>The group by field values</inlineHelpText>
        <label>Group By Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodEndDate__c</fullName>
        <description>The rollup period end date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The rollup period end date</inlineHelpText>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodStartDate__c</fullName>
        <description>The rollup period start date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The rollup period start date</inlineHelpText>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupBusinessObject__c</fullName>
        <description>The API name of the business object for the rollup</description>
        <inlineHelpText>The API name of the business object for the rollup</inlineHelpText>
        <label>Rollup Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OrderLineItem__c</fullName>
                </value>
                <value>
                    <fullName>AssetLineItem__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupField__c</fullName>
        <description>The rollup field</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The rollup field</inlineHelpText>
        <label>Rollup Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupId__c</fullName>
        <description>ID of the associated rollup</description>
        <inlineHelpText>ID of the associated rollup</inlineHelpText>
        <label>Search Filter (CPQ)</label>
        <referenceTo>Apttus_Config2__SearchFilter__c</referenceTo>
        <relationshipLabel>Rollup Data</relationshipLabel>
        <relationshipName>RollupData</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupUom__c</fullName>
        <description>The rollup unit of measure for the product</description>
        <inlineHelpText>The rollup unit of measure for the product</inlineHelpText>
        <label>Rollup Uom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Gallon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupValue__c</fullName>
        <description>The rollup value</description>
        <inlineHelpText>The rollup value</inlineHelpText>
        <label>Rollup Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SoldToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ID of the sold to account</description>
        <inlineHelpText>The ID of the sold to account</inlineHelpText>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rollup Data</relationshipLabel>
        <relationshipName>RollupData</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rollup Data</label>
    <nameField>
        <displayFormat>RD-{00000000}</displayFormat>
        <label>Rollup Data Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rollup Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>